# bk0010-emulator

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md
docs/: BK0010-hardware.md  debugger-profiler-ideas.md  interactive-disassembler.md  joystick.md  profiler-comparison.md  scanline-video-rendering.md  slow-memory-timing.md
src/: main.cpp
src/core/: Board.cpp  Board.h  Cpu.cpp  Cpu.h  Disasm.cpp  Disasm.h  Memory.cpp  Memory.h  Screen.cpp  Screen.h  Speaker.cpp  Speaker.h  Symbols.h  Trace.h
src/mcp/: McpServer.cpp  McpServer.h
src/ui/: AudioOut.cpp  AudioOut.h  BkKeymap.cpp  BkKeymap.h  CallGraphWidget.cpp  CallGraphWidget.h  CodeGraphWidget.cpp  CodeGraphWidget.h  DebuggerOverlay.cpp  DebuggerOverlay.h  FlameChartWidget.cpp  FlameChartWidget.h  FlameWidget.cpp  FlameWidget.h  Gamepad.cpp  Gamepad.h  GlScreen.cpp  GlScreen.h  HotChartWidget.cpp  HotChartWidget.h  HotPathWidget.cpp  HotPathWidget.h  MainWindow.cpp  MainWindow.h  MemVisWidget.cpp  MemVisWidget.h
tests/: cpu_tests.cpp
